# WebCafLocal

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml  feature-tests.yml  prod-ecr-deployment-workflow.yml  pull-request.yml  stage-ecr-deployment-workflow.yml
docs/: architecture.drawio  assessment-data-postgres.docx  assessment-data-postgres.md  solution-architecture.docx  solution-architecture.md  technical-feasibility.md
infra/terraform/: main.tf  outputs.tf  variables.tf
tools/: md_to_docx_minimal.py
webcaf/: settings.py
webcaf/webcaf/: admin.py
webcaf/webcaf/templates/: index.html
